Updated database and added API
