# api/swagger/v1.0.yml
@@ -29,28 +29,29 @@ paths:
                         items:
                           $ref: '#/components/schemas/HUC8'
 
-#  '/huc8/{huc8_id}':
-#    get:
-#      tags:
-#        - HUC8
-#      summary: Get a single HUC8
-#      parameters:
-#        - name: huc8_id
-#          description: HUC8 number
-#          in: path
-#          required: true
-#          schema:
-#            type: string
-#      responses:
-#        '200':
-#          description: Return HUC8
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/HUC8'
-#        '404':
-#          description: HUC8 does not exist
-#
+  '/huc8/{huc8_id}':
+    get:
+      operationId: controllers.huc8.huc8_get_id
+      tags:
+        - HUC8
+      summary: Get a single HUC8
+      parameters:
+        - name: huc8_id
+          description: HUC8 number
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Return HUC8
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HUC8'
+        '404':
+          description: HUC8 does not exist
+
 #  /practices:
 #    get:
 #      tags:
